--- a/index.html
+++ b/index.html
@@ -1,81 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technical Support</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #103B24;
-            font-family: Arial, sans-serif;
-            color: #B6FFB1;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-        }
-        .logo {
-            margin-top: 50px;
-        }
-        .logo img {
-            width: 200px;
-            height: 200px;
-        }
-        h1 {
-            color: #B6FFB1;
-            font-size: 36px;
-            margin-top: 20px;
-        }
-        p {
-            color: #B6FFB1;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        .contact {
-            background-color: #417352;
-            padding: 20px;
-            margin-top: 30px;
-            display: inline-block;
-            border-radius: 8px;
-        }
-        .contact p {
-            margin: 10px 0;
-            font-size: 18px;
-        }
-        .contact a {
-            color: #B6FFB1;
-            text-decoration: none;
-        }
-        .footer {
-            margin-top: 30px;
-            font-size: 14px;
-            color: #B6FFB1;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PollyChat Support</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #ccc; /* 灰色背景 */
+      color: #000;
+      text-align: center;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .logo {
+      width: 200px;
+      height: 200px;
+      background-color: #000;
+      border-radius: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    .logo img {
+      width: 120px;
+      height: 120px;
+      object-fit: contain;
+    }
+
+    h1 {
+      font-size: 36px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      font-family: Georgia, serif;
+    }
+
+    p {
+      font-size: 16px;
+      margin-bottom: 40px;
+    }
+
+    .contact-box {
+      background-color: #fff;
+      padding: 20px 40px;
+      border-radius: 16px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      text-align: left;
+    }
+
+    .contact-box p {
+      margin: 10px 0;
+      font-size: 14px;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      font-size: 12px;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Logo Section -->
-        <div class="logo">
-            <img src="logo.jpg" alt="Logo">
-        </div>
 
-        <!-- Title and Description -->
-        <h1>Technical Support</h1>
-        <p>If you encounter any issues while using our services, please let us know</p>
-
-        <!-- Contact Info Section -->
-        <div class="contact">
-            <p>Phone: +852 6125 4287</p>
-            <p>Email: <a href="mailto:support@melodies.com">support@melodies.com</a></p>
-        </div>
-
-        <!-- Footer Section -->
-        <div class="footer">
-            <p>&copy; 2024 Xes Technical Support Team. All Rights Reserved</p>
-        </div>
+  <div class="container">
+    <div class="logo">
+      <img src="logo.jpg" alt="PollyChat Logo">
     </div>
+    <h1>PollyChat</h1>
+    <p>If you encounter any issues while using our services, please let us know</p>
+
+    <div class="contact-box">
+      <p><strong>Phone :</strong> +234 8562486264</p>
+      <p><strong>Email :</strong> support@pollychatter.com</p>
+    </div>
+  </div>
+
+  <footer>
+    © 2025 PollyChat Technical Support Team. All Rights Reserved
+  </footer>
+
 </body>
 </html>
